tests/negative/typecheck/arg_named_not_annot.orng
// arg_named_not_annot.orng:10:9: error: expected an inferred member, got `[`
//     f(y[2] = 5)
//        ^
// arg_named_not_annot.orng:10:13: error: expected a value of type `Int`, got a value of type `()`
//     f(y[2] = 5)
//            ^
// 
fn main() -> Int {
    let mut y: [2]Int
    f(y[2] = 5)
    0
}

fn f(x: Int) -> Int { 4 }